--- a/index.html
+++ b/index.html
@@ -4,10 +4,73 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Banding.Co</title>
+    <link rel="stylesheet" href="scss/style.css">
 </head>
 <body>
-    <h1></h1>
+<div class="container">
+    <!--Navigation-->
+    <header>
+        <!--Mobil navigation-->
+        <nav class="mobile-nav">
+            <a class="logo"><img src="" alt=""></a>
+            <i></i>
+        </nav>
+
+        <!--Desktop navigation-->
+        <nav class="desktop-nav">
+            <ul>
+                <li><a href="index.html">Forside</a></li>
+                <li><a href="#">Om</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Kontakt</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!--Bannerbillede med tekst-->
+    <header class="header-img">
+        <img class="bg-billede-desktop" src="" alt="">
+
+        <img class="bg-billede-mobil" src="" alt="">
+
+        <div class="banner-tekst">
+            <h1>Styrk din profesionelle fremtoning<br> og skab et bedre brand</h1>
+            <p>Lad os hjælpe dig med rejsen!</p>
+            <a class="primary-btn" href="#">Kontakt os</a>
+        </div>
+    </header>
+
+    <!--Hovedindhold-->
+    <main>
+        <h2>Hvad skal vi hjælpe dig med?</h2>
+        <section>
+            <div class="cta-1">
+                <img src="img/branding.png" alt="">
+                <h3>Branding</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, incidunt atque voluptatem consequuntur vel ut cupiditate itaque dolor sit amet.</p>
+                <a class="primary-btn" href="#">Læs mere om branding</a>
+            </div>
+
+            <div class="cta-2">
+                <img src="img/seo.png" alt="">
+                <h3>SEO</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque modi iure omnis perferendis magnam suscipit eaque dolorem magni veniam culpa?</p>
+                <a class="primary-btn" href="#">Læs mere om SEO</a>
+            </div>
+
+            <div class="cta-3">
+                <img src="img/internet.png" alt="">
+                <h3>Hjemmesider</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat voluptas qui obcaecati voluptate deleniti saepe enim sit iste laborum omnis.</p>
+                <a class="primary-btn" href="#">Læs om hjemmesider</a>
+            </div>
+        </section>
+
+    </main>
+
+
+</div>
     
 </body>
 </html>
