--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banding.Co</title>
     <link rel="stylesheet" href="scss/style.css">
+    <script src="https://kit.fontawesome.com/1f99888007.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <div class="container">
@@ -13,14 +14,14 @@
     <header>
         <!--Mobil navigation-->
         <nav class="mobile-nav">
-            <a class="logo"><img src="" alt=""></a>
+            <a class="logo" href="index.html"><img src="img/logo-gron.png" alt=""></a>
             <i></i>
         </nav>
 
         <!--Desktop navigation-->
         <nav class="desktop-nav">
             <ul>
-                <li><a href="index.html">Forside</a></li>
+                <li><a class="active" href="index.html">Forside</a></li>
                 <li><a href="#">Om</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Kontakt</a></li>
@@ -30,9 +31,9 @@
 
     <!--Bannerbillede med tekst-->
     <header class="header-img">
-        <img class="bg-billede-desktop" src="" alt="">
+        <img class="bg-billede-desktop" src="img/computer.jpg" alt="">
 
-        <img class="bg-billede-mobil" src="" alt="">
+        <img class="bg-billede-mobil" src="img/computer-m.jpg" alt="">
 
         <div class="banner-tekst">
             <h1>Styrk din profesionelle fremtoning<br> og skab et bedre brand</h1>
@@ -44,7 +45,7 @@
     <!--Hovedindhold-->
     <main>
         <h2>Hvad skal vi hjælpe dig med?</h2>
-        <section>
+        <section class="cta-wrapper">
             <div class="cta-1">
                 <img src="img/branding.png" alt="">
                 <h3>Branding</h3>
