Tilføjelse af det sidste html

--- a/index.html
+++ b/index.html
@@ -68,8 +68,86 @@
             </div>
         </section>
 
+        <!--Tekst og billedesektion-->
+        <section class="txt-img-section">
+            <div class="txt">
+                <h2>Vi går hele vejen med jer</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut fugiat officia quo veniam, soluta necessitatibus nostrum provident dolorum cupiditate consequuntur exercitationem maiores inventore id molestiae voluptas sint sunt dignissimos! Quas.</p> 
+
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta voluptatibus, exercitationem sint, quibusdam eius ex eaque perferendis eligendi temporibus, ratione inventore. Nihil, quisquam porro voluptate sint facilis voluptatibus consequuntur beatae.</p>
+
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit earum aliquid vero illo laudantium commodi cumque maxime nihil, assumenda quos dolorem, officiis deleniti adipisci quae voluptatum debitis repellendus eveniet minima.</p>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium modi consectetur earum eligendi quis sapiente provident, perferendis placeat illum doloremque voluptate fuga tenetur atque porro at esse temporibus fugit minima.</p>
+
+                <a class="secondary-btn" href="#">Læs mere om vores processarbejde</a>
+            </div>
+
+            <div class="billede">
+
+            </div>
+        </section>
+
+        <!--Kontaktformular-->
+        <section class="kontakt-bg-img">
+            <form class="kontaktform">
+                <h3>Kontakt os</h3>
+                <p>Kontakt os nedenfor hvis du ønsker et uforpligtende tilbud.</p>
+                <div class="section-form">
+                    <label class="visually-hidden" for="navn">Navn</label>
+                    <input placeholder="Navn" id="navn" type="text" required>
+
+                    <label class="visually-hidden" for="email">E-mail</label>
+                    <input placeholder="E-mail" id="email" type="email" required>
+                </div>
+
+                <div class="section-form">
+                    <label class="visually-hidden" for="telefon">Telefon</label>
+                    <input placeholder="Telefon" id="telefon" type="tel">
+
+                    <label class="visually-hidden" for="region">Vælg region</label>
+                    <select id="region" name="select">
+                        <option value="0" selected="true" disabled>Vælg region</option>
+                        <option value="1">Region Hovedstaden</option>
+                        <option value="2">Region Sjælland</option>
+                        <option value="3">Region Syddanmark</option>
+                        <option value="4">Region Midtjylland</option>
+                        <option value="5">Region Nordjylland</option>
+                    </select>
+                </div>
+
+                <div class="section-form">
+                    <label class="visually-hidden" for="besked">Besked</label>
+                    <textarea placeholder="Besked" id="besked" rows="8"></textarea>
+                </div>
+
+                <div class="section-form">
+                    <input value="Send besked" type="submit" name="submit">
+                </div>
+            </form>
+        </section>
     </main>
 
+<!--Footer-->
+<footer>
+    <section class="footer-left">
+        <h4>Info</h4>
+        <p>Banding.Co</p>
+        <p>Kassedammen 1</p>
+        <p>6780 Sønderby</p>
+        <p>Tlf.: <a href="tel: 12232312">12 23 23 12</a></p>
+        <p>CVR: 1234 4321</p>
+    </section>
+
+    <div class="footer-right">
+        <img class="logo-footer" src="img/logo-gron.png" alt="">
+    </div>
+</footer>
+
+<!--Footer bund-->
+<footer>
+    <p class="footer-bund">Banding.Co</p>
+</footer>
 
 </div>
     
