--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!--Mobil navigation-->
         <nav class="mobile-nav">
             <a class="logo" href="index.html"><img src="img/logo-gron.png" alt=""></a>
-            <i></i>
+            <i class="navToggle bars fa-solid fa-bars fa-2xl"></i>
         </nav>
 
         <!--Desktop navigation-->
